# QT

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE
HelloWorld/: CMakeLists.txt
HelloWorld/Code/include/: Window.hpp
HelloWorld/Code/src/: Window.cpp  main.cpp
